[package]
name = "moskocoin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18.4"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
borsh = "0.10.3"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.18.4"
solana-sdk = "1.18.4"
tokio = { version = "1", features = ["macros"] }